add currency localization add date format localization needs testing